syntax = "proto3";

option go_package = "genproto/user_service";

package user_service;

service UsService {
    rpc Create(CreateUs) returns (Us) {}
    rpc GetByID(UsPrimaryKey) returns (Us) {}
    rpc GetList(GetListUsRequest) returns (GetListUsResponse) {}
    rpc Update(UpdateUs) returns (Us) {}
    rpc Delete(UsPrimaryKey) returns (Empty1) {}
}

message Empty1 {}

message UsPrimaryKey {
    string id = 1;
}

message CreateUs {
    string phone = 1;
    string gmail = 2;
    string name = 3;
    string role = 4;
}

message Us {
    string id = 1;
    string phone = 2;
    string gmail = 3;
    string name = 4;
    string role = 5;
    string created_at = 6;
    string updated_at = 7;
    int64 deleted_at = 8;
}

message UpdateUs {
    string id = 1;
    string phone = 2;
    string gmail = 3;
    string name = 4;
    string role = 5;
}

message GetUs {
    string id = 1;
    string phone = 2;
    string gmail = 3;
    string name = 4;
    string role = 5;
    string created_at = 6;
    string updated_at = 7;
    int64 deleted_at = 8;
}

message GetListUsRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListUsResponse {
    int64 count = 1;
    repeated Us users = 2;
}
